Covid Screening Completed splash screen added to notify user that data is being sent

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FaceMaskDetector">
         <activity
+            android:name=".SendData"
+            android:exported="false" />
+        <activity
             android:name=".GoodBye"
             android:exported="false" />
         <activity
